tests/neg/i12432.scala
package dotty.tools.dotc.typer

class i1 ( i1 : annotation ) // error
class i2 ( a : scala.annotation ) // error